# Fast-CDR

./: .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  FASTCDR_LIBRARY_LICENSE.txt  FAST_CDR_BUFFER_LICENSE.txt  Makefile  Makefile.am  Makefile.am.in  PLATFORM_SUPPORT.md  QUALITY.md  README.md  RELEASE_SUPPORT.md  VERSIONING.md  check_configuration.cmake  colcon.pkg  configure.ac  doxyfile.in  fastcdr.pc.in  fastcdr.repos  gtest.cmake  package.xml  versions.md
.github/: pull_request_template.md
.github/actions/install-python-packages/: action.yml
.github/workflows/: codeql-analysis.yml  fastcdr-test.yaml  fastcdr-test.yml  mac-ci.yml  mirror.yml  nightly-mac-ci.yml  nightly-ubuntu-ci.yml  nightly-windows-ci.yml  reusable-ci.yml  reusable-mac-ci.yml  reusable-ubuntu-ci.yml  reusable-windows-ci.yml  ubuntu-ci.yml  windows-ci.yml
.github/workflows/config/: test.repos
building/makefiles/: cdr.mk  fastcdr.mk
cmake/: config.h.in
cmake/common/: check_configuration.cmake  find_or_add_gtest.cmake  gtest.cmake
cmake/dev/: check_configuration.cmake  generate_msvc_libraries.cmake  gtest.cmake  set_sources.cmake
cmake/packaging/: Config.cmake.in  eProsimaPackaging.cmake  fastddsgen.cmake
cmake/packaging/linux/: AutotoolsPackaging.cmake.in  LinuxPackaging.cmake.in  SourcePackage.cmake.in  autotools_generator.cmake.in  autotools_generator_utility.cmake
cmake/packaging/windows/: EnvVarPage.nsh.in  EnvVarPage_one_arch.nsh.in  InstallRedistributables.nsh  NSIS.template.in  WindowsPackaging.cmake.in  fastcdr-config.cmake  fastcdrConfig.cmake
cmake/testing/: GoogleTest.cmake  generate_google_test_win_wrapper.cmake
doc/: README.html.in  Users Manual.odt
doc/licencias/: FASTCDR_LIBRARY_LICENSE.txt
include/cdr/: Cdr.h  Cdr_dll.h  Cdr_version.h  FastBuffer.h  FastCdr.h
include/cdr/exceptions/: BadParamException.h  Exception.h  NotEnoughMemoryException.h
include/cpp/: AbstractDataTypes.h  Cdr.h  CdrBuffer.h  Cdr_dll.h  FastBuffer.h  FastCdr.h
include/cpp/cdr/: Cdr.h  Cdr_dll.h  Cdr_version.h  FastCdr.h
include/cpp/exceptions/: BadParamException.h  Exception.h  NotEnoughMemoryException.h
include/fastcdr/: Cdr.h  CdrEncoding.hpp  CdrSizeCalculator.hpp  FastBuffer.h  FastCdr.h  FastCdr_dll.h  FastCdr_version.h  config.h.in  eProsima_auto_link.h  fastcdr_dll.h
include/fastcdr/cdr/: fixed_size_string.hpp
include/fastcdr/config/: doxygen_modules.h
include/fastcdr/detail/: container_introspection_helpers.hpp  container_recursive_inspector.hpp
include/fastcdr/exceptions/: BadOptionalAccessException.hpp  BadParamException.h  Exception.h  LockedExternalAccessException.hpp  NotEnoughMemoryException.h
include/fastcdr/xcdr/: MemberId.hpp  external.hpp  optional.hpp
include/fastcdr/xcdr/detail/: optional.hpp
src/: CMakeLists.txt
src/cpp/: CDR.rc  CMakeLists.txt  Cdr.cpp  Cdr.h  CdrBuffer.cpp  CdrSizeCalculator.cpp  FastBuffer.cpp  FastBuffer.h  FastCdr.cpp  FastCdr.h  FastCdr.rc  FastCdr_dll.h  Makefile.am.in  version.cpp
src/cpp/cdr/: CDR.rc  Cdr.cpp  FastCdr.cpp
src/cpp/exceptions/: BadOptionalAccessException.cpp  BadParamException.cpp  BadParamException.h  Exception.cpp  Exception.h  LockedExternalAccessException.cpp  NotEnoughMemoryException.cpp  NotEnoughMemoryException.h
src/java/com/eprosima/fastcdr/idl/context/: Context.java
src/java/com/eprosima/fastcdr/idl/generator/: TypesGenerator.java
src/java/com/eprosima/fastcdr/idl/templates/: FastCdrCommon.stg  JavaType.stg  TypeObjectHeader.stg  TypeObjectSource.stg  TypesHeader.stg  TypesSource.stg  gradle.stg
src/java/com/eprosima/fastcdr/templates/: Types.stg  TypesHeader.stg  TypesSource.stg
test/: CMakeLists.txt  ResizeTest.cpp  SimpleTest.cpp
test/cdr/: CMakeLists.txt  ResizeTest.cpp  SimpleTest.cpp  array_as_std_vector.cpp  container_introspection.cpp  fixed_size_string.cpp
test/cmake/: build.cmake  fold.cpp
test/xcdr/: CMakeLists.txt  appendable.cpp  basic_types.cpp  external.cpp  final.cpp  mutable.cpp  optional.cpp  utility.hpp  xcdr_tests.cpp  xcdrv1.cpp  xcdrv2.cpp
utils/doxygen/: doxyfile
utils/doxygen/doxygenfiles/: mainpage.dox
utils/installers/linux/: FastCDR.spec  Makefile.am  configure.ac  include_Makefile.am  setup_linux.sh
utils/pcTests/AbstractDataTypes/: AbstractDataTypes.cpp  AbstractDataTypes.sln  AbstractDataTypes.vcxproj  AbstractDataTypes.vcxproj.filters  Makefile
utils/pcTests/ResizeTest/: Makefile  ResizeTest.cpp  ResizeTest.sln  ResizeTest.vcxproj  ResizeTest.vcxproj.filters
utils/pcTests/SimpleTest/: Makefile  SimpleTest.cpp  SimpleTest.sln  SimpleTest.vcxproj  SimpleTest.vcxproj.filters
utils/scripts/: build_cdr.bat  package_fastcdr.sh
win32/cpp/CDR/: CDR.sln  CDR.sln.bat
win32/cpp/CDR/CDR/: CDR.vcxproj  CDR.vcxproj.filters
win32/cpp/FastCDR/: FastCDR.sln  FastCDR.sln.bat
win32/cpp/FastCDR/FastCDR/: FastCDR.vcxproj  FastCDR.vcxproj.filters
