<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastcdr</name>
  <version>2.3.0</version>
  <description>
    *eProsima Fast CDR* is a C++ serialization library implementing the Common Data Representation (CDR) mechanism defined by the Object Management Group (OMG) consortium. CDR is the serialization mechanism used in DDS for the DDS Interoperability Wire Protocol (DDSI-RTPS).
  </description>
  <maintainer email="miguelcompany@eprosima.com">Miguel Company</maintainer>
  <maintainer email="raul@eprosima.com">Raúl Sánchez-Mateos</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Fast-CDR/issues</url>
  <url type="repository">https://github.com/eProsima/Fast-CDR</url>

  <buildtool_depend>cmake</buildtool_depend>
  <doc_depend>doxygen</doc_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
